--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.6",
     "@reduxjs/toolkit": "^1.9.5",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.7",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.11",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.21.1",
+    "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.1.0"
   },
   "devDependencies": {
