--- a/package.json
+++ b/package.json
@@ -4,19 +4,21 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "ios": "react-native run-ios --simulator \"iPhone 14 Pro Max\"",
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest"
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.5",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.11",
+    "react-native-gesture-handler": "^2.12.0",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.21.1",
     "react-native-vector-icons": "^9.2.0",
