build: install google places autocomplete, maps build(ios): set minimum ios version to 13.0

--- a/ios/UberClone/Info.plist
+++ b/ios/UberClone/Info.plist
@@ -36,7 +36,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>Location permission needed to check your current location so drivers or couriers can reach you.</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>AntDesign.ttf</string>
