--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@rneui/themed": "^4.0.0-rc.7",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.71.11",
+    "react-native": "0.72.0",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-maps": "^1.7.1",
@@ -31,8 +31,10 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
-    "@react-native-community/eslint-config": "^3.2.0",
-    "@tsconfig/react-native": "^2.0.2",
+    "@react-native/eslint-config": "^0.72.2",
+    "@react-native/metro-config": "^0.72.6",
+    "@tsconfig/react-native": "^3.0.0",
+    "@types/metro-config": "^0.76.3",
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
     "@types/react-native": "^0.72.2",
@@ -41,14 +43,14 @@
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
-    "metro-react-native-babel-preset": "0.73.10",
+    "metro-react-native-babel-preset": "0.76.5",
     "prettier": "^2.4.1",
     "react-native-dotenv": "^3.4.9",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "^3.3.2",
     "typescript": "4.8.4"
   },
-  "jest": {
-    "preset": "react-native"
+  "engines": {
+    "node": ">=16"
   }
 }
